# seng

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  config.yaml
.github/workflows/: bootstrap.yml  ci.yml  deploy.yml
docs/: SCRAPING_LESSONS.md
frontend/: config.js  index.html  login.html
infra/: add-user.sh  destroy.sh  finish-bootstrap-locally.sh  local-turso-env.sh  provision.sh
infra/launchd/: scraper.template.plist
infra/lib/: common.sh  hash_password.py  healthchecks.sh  local_users_demo.py  turso.sh
scraper/: pyproject.toml
scraper/scraper/: __init__.py  beds_config.py  main.py  pipeline.py  schema_utils.py
scraper/scraper/sources/: dba.py  jsonplaceholder.py
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/migrations/: 0001_init.sql
worker/src/: auth.ts  cors.ts  db.ts  index.ts  middleware.ts  rateLimit.ts  types.ts
worker/test/: auth.test.ts  cors.test.ts  middleware.test.ts
