[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seng-scraper"
version = "0.1.0"
description = "Overvåger DBA.dk for brugte senge til kolonihaven (bred søgning, gemte filtre, manuel kuratering)."
requires-python = ">=3.11"
dependencies = [
    "scraper-core>=0.1.0",
    "playwright>=1.44",
    "pyyaml>=6.0",
]

[project.scripts]
scraper-run = "scraper.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["scraper*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
